test/Fail/Erased-data-3.agda
interleaved mutual

  data @0 D : Set where

  x : D

  data D where
    c : D

  x = c
